@@ -15,19 +15,22 @@
  */
 package client.scenes;
 
-import client.utils.ConfigUtils;
+import client.utils.Config;
+import client.utils.LanguageUtils;
 import com.google.inject.Inject;
 
 import client.utils.ServerUtils;
-import com.google.inject.Inject;
 import commons.Event;
 import commons.Expense;
 import commons.Participant;
+import javafx.beans.property.SimpleStringProperty;
+import javafx.beans.property.StringProperty;
 import javafx.collections.FXCollections;
 import javafx.collections.ListChangeListener;
 import javafx.collections.ObservableList;
 import javafx.collections.transformation.FilteredList;
 import javafx.fxml.FXML;
+import javafx.fxml.Initializable;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Node;
@@ -42,20 +45,22 @@ import javafx.scene.text.Text;
 import javafx.scene.text.TextAlignment;
 import javafx.scene.text.TextFlow;
 
-import java.io.File;
+import java.net.URL;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.Map;
+import java.util.ResourceBundle;
+import java.util.stream.Collectors;
 import java.util.StringJoiner;
 import java.util.UUID;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
-public class OverviewCtrl {
+public class OverviewCtrl implements Initializable {
 
+    private Config config;
     private final ServerUtils server;
     private final MainCtrl mainCtrl;
+    private final LanguageUtils languageUtils;
     private static final double EXPENSE_EDIT_SIZE = 17;
     private static final double EXPENSE_MARGIN = 10;
     private static final Font ARIAL_BOLD = new Font("Arial Bold", 13);
@@ -80,23 +85,35 @@ public class OverviewCtrl {
     @FXML
     private VBox list;
     @FXML
+    private Label expensesLabel;
+    @FXML
+    private Label participantsLabel;
+    @FXML
     private Button sendInvites;
     @FXML
     private Button addExpense;
     @FXML
     private Button settleDebts;
+
+    private StringProperty fromText;
+    private StringProperty includingText;
+
     @Inject
-    public OverviewCtrl(ServerUtils server, MainCtrl mainCtrl) {
+    public OverviewCtrl(ServerUtils server, MainCtrl mainCtrl, Config config, LanguageUtils languageUtils) {
         this.mainCtrl = mainCtrl;
         this.server = server;
+        this.config = config;
+        this.languageUtils = languageUtils;
+        this.fromText = new SimpleStringProperty();
+        this.includingText = new SimpleStringProperty();
     }
 
     public void startup() {
         event = mainCtrl.getEvent();
+        title.setText(event.getName());
         expenses = FXCollections.observableArrayList(event.getExpenses().stream().toList());
         filteredExpenses = new FilteredList<>(expenses);
         participants = FXCollections.observableArrayList(event.getParticipants().stream().toList());
-        title.setText(event.getName());
         participantsText.setText(participants.stream().map(Participant::getNickname).collect(Collectors.joining(", ")));
         choiceBox.getItems().addAll(participants.stream().map(Participant::getNickname).toList());
         List<BorderPane> collection =
@@ -136,10 +153,10 @@ public class OverviewCtrl {
             }
         });
         participants.add(new Participant("Person 1", null));
-        participants.getFirst().setId(UUID.randomUUID());
+        participants.get(0).setId(UUID.randomUUID());
         participants.add(new Participant("Peson 2", null));
         expenses.add(new Expense(HARDCODED_EXPENSE, "Example expense", LocalDateTime.now(),
-                participants.getFirst(), participants));
+                participants.get(0), participants));
     }
     public void clear() {
         expenses = null;
@@ -206,10 +223,40 @@ public class OverviewCtrl {
         BorderPane.setAlignment(editImage, Pos.CENTER);
         return borderPane;
     }
+
+    public void refresh() {
+        event = mainCtrl.getEvent();
+        expenses = FXCollections.observableList(event.getExpenses().stream().toList());
+        participants = FXCollections.observableList(event.getParticipants().stream().toList());
+        title.setText(event.getName());
+        participantsText.setText(String.join(",",
+                participants.stream().map(Participant::getNickname).toList()));
+        choiceBox.getItems().addAll(participants.stream().map(Participant::getNickname).toList());
+        choiceBox.setValue(choiceBox.getItems().get(0));
+//        choiceBox.setValue(participants.get(0));
+//        System.out.println(event.getExpenses().toString());
+        List<BorderPane> collection =
+                event.getExpenses().stream().map(this::expenseComponent).toList();
+        list.getChildren().addAll(collection);
+//        switchToDutch();
+        switch (config.getLocale().getLanguage()) {
+            case "nl":
+                languageUtils.setLang("nl");
+                break;
+            case "en":
+                languageUtils.setLang("en");
+                break;
+            default:
+                languageUtils.setLang("en");
+                break;
+        }
+    }
+
     public void choiceChanged() {
         String name = choiceBox.getValue();
-        from.setText("From ".concat(name));
-        including.setText("Including ".concat(name));
+        // TODO: Make proper string bindings
+        from.setText(fromText.getValue().concat(" ").concat(name));
+        including.setText(includingText.getValue().concat(" ").concat(name));
         currentParticipant = participants.get(0);
     }
     public void select(javafx.event.Event e) {
@@ -270,23 +317,14 @@ public class OverviewCtrl {
         mainCtrl.showStatistics();
     }
 
- public void switchLanguage(Map<String, String> textMap) {
-        title.setText(textMap.get("title"));
-        sendInvites.setText(textMap.get("sendInvites"));
-        addExpense.setText(textMap.get("addExpense"));
-        settleDebts.setText(textMap.get("settleDebts"));
-        all.setText(textMap.get("all"));
-        from.setText(textMap.get("from"));
-        including.setText(textMap.get("including"));
-    }
-    public void switchToDutch() {
-        Map<String, String> textMap = ConfigUtils.readLanguage(new File("client/src/main/resources/config/overviewDutch.csv"));
-        switchLanguage(textMap);
-    }
 
-    public void switchToEnglish() {
-        Map<String, String> textMap = ConfigUtils.readLanguage(new File("client/src/main/resources/config/overviewEnglish.csv"));
-        switchLanguage(textMap);
+        public void initialize(URL url, ResourceBundle resourceBundle) {
+        this.sendInvites.textProperty().bind(languageUtils.getBinding("overview.sendInvitesBtn"));
+        this.expensesLabel.textProperty().bind(languageUtils.getBinding("overview.expensesLabel"));
+        this.addExpense.textProperty().bind(languageUtils.getBinding("overview.addExpenseBtn"));
+        this.settleDebts.textProperty().bind(languageUtils.getBinding("overview.settleDebtsBtn"));
+        this.all.textProperty().bind(languageUtils.getBinding("overview.allLabel"));
+        this.fromText.bind(languageUtils.getBinding("overview.allLabel"));
+        this.includingText.bind(languageUtils.getBinding("overview.includingLabel"));
     }
-
 }
